--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html><head><title>Parcel Sandbox</title><meta charset="UTF-8"><link rel="stylesheet" href="/csb-by00m/src.fb881dd0.css"></head><body> <div id="app"></div> <script src="/csb-by00m/src.d634ba58.js">
-	</script> </body></html>
+<!DOCTYPE html><html><head><title>Parcel Sandbox</title><meta charset="UTF-8"></head><body> <div id="app"> <button id="user-btn">Add User</button> <input type="text" name="search" placeholder="search" id="search"> <button id="sort-des">Sort Des</button> <button id="sort-asc">Sort Asc</button> <div id="user-list"></div> </div> <script src="/csb-by00m/src.1494c1a4.js"></script> </body></html>
